# unified-mesa-project

./: .pick_status.json  20966.diff  20991.diff  README.MD  VERSION  android-aarch64  android-arm32  android-drm-aarch64  android-drm-arm32  android-drm-x86  android-drm-x86_64  android-turnip-aarch64  android-turnip-arm32  android-turnip-x86_64  android-x86  android-x86_64  freedreno_kgsl...freedreno_kgsl-inline_sw_helper.diff  freedreno_kgsl...freedreno_kgsl-no_hardcoded.diff.1  ios-aarch64  ios-drm-aarch64  log.pc  mesa-zink.diff  meson.build  meson.build.rej  meson_options.txt  meson_options.txt.rej  nativewindow.pc  patch.diff  pojav-virgl.diff  rejlist.txt  sync.pc  ump.diff  vulkan_android.pc  vulkan_ios.pc
.github/workflows/: android.yml  classic-pojav-android.yml  classic-pojav-android_dbg.yml  ios.yml  pojav-gallium-android.yml  pojav-gallium-ios.yml  pojav-gallium-llvm.yml  pojav-gallium.yml  pojav-turnip.yml  turnip.yml  ump-android.yml  ump-android_debug.yml  ump-pojav-android.yml  ump-pojav-android_debug.yml  ump-scl-ios.yml  waydroid-android.yml
.gitlab-ci/: image-tags.yml
.gitlab-ci/common/: generate-env.sh
.gitlab-ci/container/: build-deqp-runner.sh  build-deqp.sh  gitlab-ci.yml
.gitlab-ci/test/: gitlab-ci.yml
android/: Android.mk
docs/: envvars.rst  features.txt  features.txt.rej  release-calendar.csv  relnotes.rst  rusticl.rst
docs/drivers/: zink.rst
docs/relnotes/: 22.2.5.rst  24.1.0.rst  new_features.txt
include/drm-uapi/: drm_fourcc.h  panthor_drm.h
src/: .clang-format  meson.build
src/android_stub/: meson.build  meson.build.rej
(+560 files in other folders)
